# Aphrodite

./: .clang-format  .cmake-format  .gdb_history  .gitignore  .gitmodules  CHANGES  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  config.toml  imgui.ini  readme.org  shaders_compile.sh
Aphrodite-Editor/: CMakeLists.txt
Aphrodite-Editor/src/: Editor.cpp  EditorLayer.cpp  EditorLayer.h
Aphrodite-Runtime/: CMakeLists.txt
Aphrodite-Runtime/include/: Aphrodite.h  Aphrodite.hpp
Aphrodite-Runtime/src/: Aphrodite.h  pch.cpp  pch.h
Hazel/: CMakeLists.txt
Hazel/Platform/: WindowsWindow.cpp  WindowsWindow.h
Hazel/doc/: readme.md
Hazel/include/: Application.h  Core.h  Log.h  Test.h
Hazel/src/: Hazel.h  Test.cpp  hzpch.cpp  hzpch.h
Hazel/test/: CMakeLists.txt  Sandbox.cpp
Hazelnut/: CMakeLists.txt
Hazelnut/src/: EditorLayer.cpp  EditorLayer.h  HazelnutApp.cpp
Sandbox/: CMakeLists.txt
Sandbox/App/: CMakeLists.txt  Sandbox.cpp
Sandbox/Others/: CMakeLists.txt  fragment.glsl  opgl_test.h  test.cpp  test.h  vertex.glsl
Sandbox/src/: Application.cpp  ExampleLayer.cpp  ExampleLayer.h  Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp  imgui.ini  main.cpp
base/: CMakeLists.txt  camera.cpp  camera.h  camera.hpp  vklBase.cpp  vklBase.h  vklBuffer.cpp  vklBuffer.h  vklCamera.cpp  vklCamera.h  vklDevice.cpp  vklDevice.h  vklEntity.cpp  vklEntity.h  vklGLTFScene.cpp  vklGLTFScene.h  vklInit.cpp  vklInit.h  vklInit.hpp  vklLight.cpp  vklLight.h  vklMaterial.cpp  vklMaterial.h  vklMesh.cpp  vklMesh.h  vklMesh.hpp  vklModel.cpp  vklModel.h  vklObject.cpp  vklObject.h  vklPipeline.cpp  vklPipeline.h  vklSceneManger.cpp  vklSceneManger.h  vklSceneRenderer.cpp  vklSceneRenderer.h  vklTexture.cpp  vklTexture.h  vklUtils.cpp  vklUtils.h  (+3 more)
engine/: CMakeLists.txt  aph_core.hpp  aph_renderer.hpp  app.cpp  app.h  common.h  pch.h  spinlock.h  vkl.hpp  vklHelper.hpp  vklRenderer.hpp  window.cpp  window.h
engine/allocator/: CMakeLists.txt  alignedAlloc.cpp  alignedAlloc.h  allocator.cpp  allocator.h  objectPool.h
engine/api/: CMakeLists.txt  buffer.cpp  buffer.h  device.cpp  deviceAllocator.h  gpuResource.h  mesh.cpp  mesh.h  pipeline.cpp  resourcehandle.h  texture.h  vkSceneRenderer.cpp  vkSceneRenderer.h  vkUtils.cpp
engine/app/: CMakeLists.txt  app.cpp  app.h  appOptions.cpp  appOptions.h
engine/cli/: CMakeLists.txt  cli.cpp  cli.h
engine/common/: CMakeLists.txt  alignedAlloc.cpp  alignedAlloc.h  allocator.h  app.h  arrayProxy.h  assetManager.cpp  assetManager.h  bitOp.h  cli.cpp  cli.h  common.cpp  common.h  concept.h  coroutine.h  dataBuilder.h  endianness.h  enum.h  enumHelper.h  functiontraits.h  graphView.cpp  hash.h  inputCode.h  logger.cpp  logger.h  logger.hpp  objectPool.h  profiler.h  singleton.h  smallVector.h  spinlock.h  threadPool.cpp  threadPool.h  timer.h  uuid.h  window.cpp  window.h  wsi.cpp  wsi.h
engine/event/: CMakeLists.txt  event.h  eventManager.cpp  eventManager.h
engine/filesystem/: CMakeLists.txt  filesystem.cpp  filesystem.h
engine/global/: CMakeLists.txt  globalManager.cpp  globalManager.h
engine/input/: input.h
engine/math/: CMakeLists.txt  math.cpp  math.h  mathImpl.h
engine/module/: CMakeLists.txt  module.cpp  module.h
engine/renderGraph/: CMakeLists.txt  renderGraph.cpp  renderGraph.h  renderPass.cpp  renderPass.h
engine/renderer/: CMakeLists.txt  device.h  gpuResource.h  renderer.cpp  renderer.h  sceneRenderer.cpp  sceneRenderer.h  uiRenderer.cpp  uiRenderer.h
engine/resLoader/: resLoader.cpp
engine/resource/: CMakeLists.txt  bufferLoader.h  geometry.h  geometryLoader.cpp  geometryLoader.h  imageLoader.cpp  imageLoader.h  resourceLoader.cpp  resourceLoader.h  shaderLoader.cpp  shaderLoader.h  shaderReflector.cpp  shaderReflector.h
engine/scene/: CMakeLists.txt  camera.cpp  camera.h  entity.cpp  entity.h  entityGLTFLoader.cpp  entityGLTFLoader.h  entityManualLoader.cpp  entityManualLoader.h  idObject.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  node.cpp  node.h  object.cpp  object.h  resourceManager.cpp  resourceManager.h  scene.cpp  scene.h  sceneManager.cpp  sceneManager.h  sceneNode.cpp  sceneNode.h  sceneRenderer.cpp  sceneRenderer.h  uniformObject.cpp  uniformObject.h  vklGLTFScene.cpp  vklGLTFScene.h
engine/threads/: CMakeLists.txt  taskManager.h  taskManger.cpp  threadPool.cpp  threadPool.h  threadSafeQueue.h  threadUtils.h
engine/ui/: CMakeLists.txt  imgui_backend.cpp  imgui_backend.h  ui.cpp  ui.h
engine/wsi/: CMakeLists.txt  wsi.cpp  wsi.h  wsi_glfw.cpp  wsi_sdl.cpp  wsi_sdl2.cpp
examples/: CMakeLists.txt
examples/base_texture/: base_texture.cpp  base_texture.h
examples/basic_texture/: basic_texture.cpp  basic_texture.h
examples/hello_aphrodite/: README.org  hello_aphrodite.cpp  hello_aphrodite.h
examples/imgui_example/: imgui_example.h
examples/mesh_shading/: mesh_shading.cpp  mesh_shading.h
examples/ray_tracing/: ray_tracing.cpp
examples/render_graph_visualizer/: README.org  render_graph_visualizer.cpp  render_graph_visualizer.h
examples/scene_manager/: scene_manager.cpp  scene_manager.h
examples/triangle/: triangle.cpp  triangle.h
examples/triangle_demo/: triangle_demo.cpp  triangle_demo.h
src/: CMakeLists.txt  aph_core.hpp  aphrodite.hpp
src/allocator/: CMakeLists.txt  allocator.cpp  allocator.h  objectPool.h  polyObjectPool.h
src/api/: CMakeLists.txt  capture.cpp  capture.h  deviceAllocator.h  gpuResource.h  resourcehandle.h
src/app/: CMakeLists.txt  app.cpp  app.h  appOptions.cpp  appOptions.h
src/cli/: CMakeLists.txt  cli.cpp  cli.h  cli.inl
src/common/: CMakeLists.txt  bitOp.h  breadcrumbTracker.cpp  breadcrumbTracker.h  common.cpp  common.h  dataBuilder.h  debug.h  endianness.h  enum.h  functiontraits.h  graphView.cpp  graphView.h  hash.h  logger.cpp  logger.h  macros.h  (+6 more)
tests/: CMakeLists.txt  allocator.cpp  bitop.cpp  event.cpp  filesystem.cpp  materialSystemTests.cpp  module.cpp  objectPool.cpp  object_pool.cpp  poolTests.cpp  singleton.cpp  smallVector.cpp  taskManager.cpp  testDemo.cpp  threadPool.cpp  timer.cpp
(+805 files in other folders)
